# TorreaderPDF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
resources/: TorReader.rc  resources.qrc
src/: main.cpp
src/annotations/: AnnotationLayer.cpp  AnnotationLayer.h  AnnotationManager.cpp  AnnotationManager.h  AnnotationTool.cpp  AnnotationTool.h  AnnotationTypes.h
src/core/: GoogleAuth.cpp  GoogleAuth.h  OAuthCallbackServer.cpp  OAuthCallbackServer.h  PdfDocument.cpp  PdfDocument.h  PdfEditor.cpp  PdfEditor.h  PdfPrinter.cpp  PdfPrinter.h  PdfRenderer.cpp  PdfRenderer.h  PdfSigner.cpp  PdfSigner.h  TextSearch.cpp  TextSearch.h  ThumbnailRenderPool.cpp  ThumbnailRenderPool.h  TileCacheFile.cpp  TileCacheFile.h  Translator.cpp  Translator.h  UpdateChecker.cpp  UpdateChecker.h
src/formibpdf/: Cargo.toml  formibpdf.h
src/formibpdf/src/: acroform.rs  ccitt.rs  cmap.rs  document.rs  font.rs  function.rs  graphics_state.rs  image_decoder.rs  interpreter.rs  j2k.rs  jbig2.rs  lib.rs  path.rs  pattern.rs  pdf_object.rs  rasterizer.rs  resource.rs  shading.rs  text_order.rs  token.rs  xref.rs
src/ui/: AboutDialog.cpp  ContinuousView.cpp  ContinuousView.h  GateDialog.cpp  GateDialog.h  MainWindow.cpp  MainWindow.h  MergeDialog.cpp  MergeDialog.h  NoteInputDialog.cpp  NoteInputDialog.h  NotificationBar.cpp  NotificationBar.h  PdfGpuView.cpp  PdfGpuView.h  PdfView.cpp  PdfView.h  PrintDialog.cpp  PrintDialog.h  SearchPanel.cpp  SearchPanel.h  SignDialog.cpp  SignDialog.h  SignaturePanel.cpp  SignaturePanel.h  ThumbnailPanel.cpp  ThumbnailPanel.h  ToolBar.cpp  ToolBar.h  TranslationPopup.cpp  TranslationPopup.h  UpdateBanner.cpp  UpdateBanner.h
